--- a/scripts/data_cleaning_phase_II.ipynb
+++ b/scripts/data_cleaning_phase_II.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "28ff6e1e",
    "metadata": {},
    "source": [
     "# Data Cleaning Phase II"
@@ -9,6 +10,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3f37e836",
    "metadata": {},
    "source": [
     "In this notebook, you will do the following:\n",
@@ -20,6 +22,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6cf7de7d",
    "metadata": {},
    "source": [
     "## Section 1: Data Cleaning Steps\n",
@@ -29,6 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "d6b5a0e6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,6 +48,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "56b365a5",
    "metadata": {},
    "source": [
     "### OpenRefine: Dish dataset cleaning\n",
@@ -58,6 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "4585b083",
    "metadata": {},
    "outputs": [
     {
@@ -117,6 +123,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5b660f84",
    "metadata": {},
    "source": [
     "### OpenRefine: Menu Item Cleaning\n",
@@ -131,6 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "181493f1",
    "metadata": {},
    "outputs": [
     {
@@ -229,6 +237,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "bbc4eb3f",
    "metadata": {},
    "source": [
     "### Python: Data Cleaning"
@@ -236,6 +245,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "648c3303",
    "metadata": {},
    "source": [
     "**Step 1.3**\n",
@@ -245,6 +255,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3e200493",
    "metadata": {},
    "source": [
     "@BEGIN main\n",
@@ -258,6 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "b977deca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,6 +282,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4c448ad1",
    "metadata": {},
    "source": [
     "**Step 1.4**\n",
@@ -281,6 +294,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6da74628",
    "metadata": {},
    "source": [
     "@BEGIN CleanPrice\n",
@@ -292,6 +306,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "356854d0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,6 +316,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "da803d56",
    "metadata": {},
    "source": [
     "@END CleanPrice"
@@ -308,6 +324,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "23226f8f",
    "metadata": {},
    "source": [
     "@BEGIN DishTitleCase\n",
@@ -318,6 +335,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3e45b5c2",
    "metadata": {},
    "source": [
     "**Step 1.5**\n",
@@ -330,6 +348,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "d2550e9a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,6 +357,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4b128297",
    "metadata": {},
    "source": [
     "@END DishTitleCase"
@@ -345,6 +365,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e5475759",
    "metadata": {},
    "source": [
     "**Step 1.6**\n",
@@ -358,6 +379,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f2df837e",
    "metadata": {},
    "source": [
     "@BEGIN RemoveDuplicateDishes\n",
@@ -368,6 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "d2827975",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,6 +411,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c76ec24f",
    "metadata": {},
    "source": [
     "@END RemoveDuplicateDishes"
@@ -395,6 +419,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a5177e9d",
    "metadata": {},
    "source": [
     "**Step 1.7**\n",
@@ -406,6 +431,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9b95f95f",
    "metadata": {},
    "source": [
     "@BEGIN RemoveOutliers\n",
@@ -416,6 +442,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "c679aef9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,6 +456,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ff6d8c24",
    "metadata": {},
    "source": [
     "@END RemoveOutliers"
@@ -436,6 +464,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e3d9c84c",
    "metadata": {},
    "source": [
     "**Step 1.8**\n",
@@ -447,6 +476,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c16fa5e5",
    "metadata": {},
    "source": [
     "@BEGIN NormalizePrice\n",
@@ -457,6 +487,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "83a3df5f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,6 +496,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0256248d",
    "metadata": {},
    "source": [
     "@END NormalizePrice"
@@ -472,6 +504,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "80b26e85",
    "metadata": {},
    "source": [
     "**Step 1.9**\n",
@@ -483,6 +516,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "777f621c",
    "metadata": {},
    "source": [
     "@BEGIN RemoveOrphanDishes\n",
@@ -493,6 +527,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
+   "id": "19a04606",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,6 +537,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e1f82349",
    "metadata": {},
    "source": [
     "@END RemoveOrphanDishes"
@@ -509,6 +545,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2f558e72",
    "metadata": {},
    "source": [
     "@BEGIN RemoveOrphanMenuItems\n",
@@ -519,6 +556,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "46420889",
    "metadata": {},
    "source": [
     "**Step 1.10**\n",
@@ -530,6 +568,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d697f2eb",
    "metadata": {},
    "source": [
     "@BEGIN StandardizeDates\n",
@@ -540,6 +579,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
+   "id": "2bfc3538",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -548,6 +588,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5a9a65d4",
    "metadata": {},
    "source": [
     "@END StandardizeDates"
@@ -555,6 +596,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7e54e459",
    "metadata": {},
    "source": [
     "**Step 1.11**\n",
@@ -565,6 +607,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
+   "id": "0560869d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -575,6 +618,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "07ff2003",
    "metadata": {},
    "source": [
     "## Section 2: Document Data Quality Changes"
@@ -582,6 +626,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "65d63d70",
    "metadata": {},
    "source": [
     "**Description:** Run a series of tests to prove that the data quality has been improved.\n",
@@ -592,6 +637,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b840e4e7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -601,6 +647,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "13f2a4a3",
    "metadata": {},
    "source": [
     "**Step 2.1a**\n",
@@ -615,6 +662,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "2e30a852",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -624,6 +672,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "099238fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -632,6 +681,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "862ebf29",
    "metadata": {},
    "source": [
     "**Step 2.1b**\n",
@@ -646,6 +696,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ba54e0c7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -655,6 +706,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ecbea789",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -663,6 +715,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "269e9852",
    "metadata": {},
    "source": [
     "**Step 2.2**\n",
@@ -677,6 +730,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ccb98a73",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -691,6 +745,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "99856c40",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -699,6 +754,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c34bfb4c",
    "metadata": {},
    "source": [
     "**Step 2.3**\n",
@@ -713,6 +769,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b907baae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -727,6 +784,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "83a1eee5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -735,6 +793,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "07244e9f",
    "metadata": {},
    "source": [
     "**Step 2.4**\n",
@@ -749,6 +808,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "5ce99c98",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -767,6 +827,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f88be8f7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -776,6 +837,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "11a9d397",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -784,6 +846,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "722662dd",
    "metadata": {},
    "source": [
     "**Step 2.5**\n",
@@ -798,6 +861,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a902a32f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -815,6 +879,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b573271e",
    "metadata": {
     "scrolled": true
    },
@@ -825,6 +890,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "201324e3",
    "metadata": {},
    "source": [
     "**Step 2.6**\n",
@@ -839,6 +905,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b2824249",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -856,6 +923,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "bf150f80",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -864,6 +932,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b02639db",
    "metadata": {},
    "source": [
     "**Step 2.7**\n",
@@ -878,6 +947,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "089825a4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -901,6 +971,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "85a750ca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -909,6 +980,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2d2a4922",
    "metadata": {},
    "source": [
     "**Step 2.8**\n",
@@ -923,6 +995,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c693d55d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -948,6 +1021,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "71e41793",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -957,6 +1031,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e22a9ecf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -966,6 +1041,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "68dff426",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -974,6 +1050,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2541dd93",
    "metadata": {},
    "source": [
     "**Step 2.9**\n",
@@ -988,6 +1065,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b77d53c9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1007,6 +1085,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1aa22279",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1015,6 +1094,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "49423780",
    "metadata": {},
    "source": [
     "## Section 3: Work Flow Model"
@@ -1022,6 +1102,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "deff70b7",
    "metadata": {},
    "source": [
     "Step 3.1\n",
@@ -1034,6 +1115,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "da9298be",
    "metadata": {},
    "outputs": [
     {
@@ -1054,6 +1136,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
+   "id": "162e6eaf",
    "metadata": {},
    "outputs": [
     {
@@ -1074,6 +1157,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "3e626341",
    "metadata": {},
    "outputs": [
     {
@@ -1106,6 +1190,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c1bc9e74",
    "metadata": {},
    "source": [
     "Step 3.2\n",
@@ -1118,6 +1203,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "64fbad38",
    "metadata": {},
    "outputs": [
     {
@@ -1138,6 +1224,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "6cd67ef4",
    "metadata": {},
    "outputs": [
     {
@@ -1171,6 +1258,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "64913e46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1184,6 +1272,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "d9900060",
    "metadata": {},
    "outputs": [
     {
@@ -1204,6 +1293,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "07c45ab4",
    "metadata": {},
    "outputs": [
     {
@@ -1236,20 +1326,34 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c07ae22c",
    "metadata": {},
    "source": [
     "## Section 4: Conclusion"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
+   "id": "79e3de71",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "In Phase II of the project, we focused on data cleaning to address the data quality problems identified in the dataset. We successfully executed test cases to ensure the data is clean and ready for analysis in the main use case - Dish Price Analysis (U1). The initial data quality problems related to missing data, dirty data, key constraints, and duplicates/similarities were addressed using various data cleaning techniques.\n",
+    "\n",
+    "For the main use case, we specifically focused on data related to dish prices, including the 'price', 'highest price', 'lowest price', and 'created at' fields. We ensured that the dataset has no missing dish prices, no NULL values in any columns, and outliers were removed. Additionally, we standardized data formats to ensure consistency, trimmed leading and trailing whitespaces from dish names, and removed duplicate dish names.\n",
+    "\n",
+    "Through this comprehensive data cleaning process, we have enhanced the quality of the dataset, ensuring it is accurate, reliable, and suitable for the Dish Price Analysis (U1) use case. This allows us to proceed with further data analysis and gain valuable insights into historical changes in dish prices over time. The clean and structured dataset will enable us to provide meaningful recommendations.\n",
+    "\n",
+    "In phase 2 the team made the following contributions:\n",
+    "\n",
+    "- Section 1 - Mohammed\n",
+    "- Section 2 - David\n",
+    "- Section 3 - Jhansi\n",
+    "- Section 4 - All\n"
+   ]
   },
   {
    "cell_type": "markdown",
+   "id": "ec7d7dec",
    "metadata": {},
    "source": [
     "@END main"
@@ -1272,7 +1376,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
